--- a/www/index.html
+++ b/www/index.html
@@ -80,9 +80,10 @@
 			'selection:cleared': resetInfoWin,
 		});
 		loadCanvas();
+		promptBoardEmpty();
 	}
 
-	function promptBoardEmpty(lastSave) {
+	function promptBoardEmpty() {
 		var data = jQuery.parseJSON(lastSave);
 		if(data.objects == ""){
 			var input = document.getElementById("addblock");
@@ -94,7 +95,7 @@
 	function loadCanvas(){
 		canvas.loadFromJSON(
 			lastSave,										// Input data: load from lastSave
-			promptBoardEmpty(lastSave),						// 'Callback'(optional): rerender canvas
+			canvas.renderAll.bind(canvas),						// 'Callback'(optional): rerender canvas
 			function(o,object){ 
 				setDefSettings(object);
 			}	// 'Reviver' (optional): re-set default settings on all objects
@@ -772,7 +773,8 @@
 				<div id="boardInfo" align="left">
 					You are currently viewing <strong>{{ currBoard.boardName }}</strong><br>
 				</div>
-				<span>Want to view another board? Click here -> </span>
+				<span>Want to view another board? Click here</span>
+				<p>
 				<div class="btn-group">
 					<button class="disabled btn btn-primary">{{ currBoard.boardName }}</button>
 					{% if user.numBoards > 0 or user.following > 0 %}
@@ -792,22 +794,27 @@
 					</ul>
 					{% endif %}
 				</div>
+				</p>
 				
 				<!--BREAK--><hr>
 
 				<!--TO BE FILLED-->
-				{% if user.email in currBoard.boardEditor %}
-				<!--Show set of buttons exclusive to board editors-->
-				{% elif user.email in currBoard.boardPoster %}
-				<!--Show set of buttons exclusive to board posters-->
+				{% if user.email == currBoard.boardUser or user.email in currBoard.boardEditor %}
+				<!--EDIT BUTTON-->
+				<div id="toolBoxButton"><button onclick="showToolBox()">Edit</button></div>
+				<div id="editinglocked">Someone else is editing. Please try again later.</div>
+
+				{% elif user.email == currBoard.boardUser or user.email in currBoard.boardPoster %}
+				<!--EDIT BUTTON-->
+				<div id="toolBoxButton"><button onclick="showToolBox()">Edit</button></div>
+				<div id="editinglocked">Someone else is editing. Please try again later.</div>
+
 				{% else %}
 				<!--Show set of buttons exclusive to board viewers-->
 				{% endif %}
 
 
-				<!--EDIT BUTTON-->
-				<div id="toolBoxButton"><button onclick="showToolBox()">Edit</button></div>
-				<div id="editinglocked">Someone else is editing. Please try again later.</div>
+				
 				<!--TABSS-->
 				<ul id="myTab" class="nav nav-pills">
 					<li class="active"><a href="#new" data-toggle="tab">New Object</a></li>
