Fix small issue with background selection
> Previously, background selection bugs when the selection not made by
solely clicking on the background.

--- a/www/index.html
+++ b/www/index.html
@@ -606,9 +606,11 @@
 	var bgselected;
 	$(function () {
 		$("#selectableBG").selectable({
-               selected: function() {
+               stop: function() {
                   $(".ui-selected", this).each(function() {
-                     bgselected = $("#selectableBG li").index(this) + 1;
+                  	if ($("#selectableBG li").index(this) > -1) {
+                    	bgselected = $("#selectableBG li").index(this) + 1;
+                 	}
                   });
                }
    		});
