Changed 2 default background
Added image for the 6th selection (No background).

--- a/www/index.html
+++ b/www/index.html
@@ -911,7 +911,7 @@
 									<li class="ui-state-default"><img height="120" width="180" src="../images/bg3.jpg"></img></li>
 									<li class="ui-state-default"><img height="120" width="180" src="../images/bg4.jpg"></img></li>
 									<li class="ui-state-default"><img height="120" width="180" src="../images/bg5.jpg"></img></li>
-									<li class="ui-state-default"><img height="120" width="180" id="bgimageHolder" src=""></img></li>
+									<li class="ui-state-default"><img height="120" width="180" id="bgimageHolder" src="../images/bg6.jpg"></img></li>
 								</ul>
 								<center>
 								<p><input type="text" id="bgimageurl" onblur="bgpreloadImage()" placeholder="<Custom Image Url - 900 x 600>"></p>
